tests/neg/semantic_variadic_next_type_unsupported.baa
// RUN: expect-fail
// EXPECT: نداء 'معامل_تالي': نوع غير مدعوم في هذا الإصدار

صحيح اجلب_متغير(صحيح عدد، ...) {
    عدم* قائمة = عدم.
    بدء_معاملات(قائمة، عدد).
    معامل_تالي(قائمة، عدم).
    نهاية_معاملات(قائمة).
    إرجع ٠.
}
